# archmage

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  index.html
.fleet/: run.json
archmage/: Cargo.toml
archmage/src/: main.rs  mesh.rs  renderer.rs  texture.rs
archmage/src/shaders/: mod.rs  screen_shader.frag  screen_shader.vert
compiler/: Cargo.toml
compiler/src/: context.rs  func.rs  glob.rs  instruction.rs  main.rs  out_bin.rs
core/: Cargo.toml
core/src/: bin_reader.rs  bin_structs.rs  bin_utils.rs  byte_vec.rs  byte_vec_reader.rs  lib.rs  opcodes.rs  ser_des.rs
os/: kernel.sha  kernel.srd  mem_layout.sha  mem_layout.srd  syscalls.sha  syscalls.srd
src/: input.rs  interrupts.rs  lib.rs  main.rs  memory.rs  palette.rs  sys_call.rs  video_mode.rs
vm/: Cargo.toml
vm/src/: lib.rs  stack.rs
