[package]
name = "archmage"
version = "0.1.0"
authors = ["Egidijus Lileika <lileikaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
flask = { git = "https://github.com/aegis-dev/flask.git" }
shard_vm = { git = "https://github.com/aegis-dev/shard_lang.git" }
