[package]
name = "archmage"
version = "0.1.0"
authors = ["Egidijus Lileika <lileikaa@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
num_enum = "0.5.1"
shard_vm = { path = "libs/shard_lang/shard_vm" }
flask = { path = "libs/flask" }
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"

[dependencies.web-sys]
version = "0.3.60"
features = [
    'Window',
]

[lib]
crate-type = ["cdylib"]