[package]
name = "archmage"
version = "0.1.0"
authors = ["Egidijus Lileika <lileikaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gl = "0.14.0"

[dependencies.sdl2]
version = "0.34.4"
features = ["bundled", "static-link"]